k8s/backend-deployment.yaml
# 1. The Deployment (Runs your app)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-a-backend
spec:
  replicas: 2 
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend-container
        image: 378607873661.dkr.ecr.eu-north-1.amazonaws.com/project-a-backend:latest
        ports:
        - containerPort: 3000
        # --- THIS IS THE NEW SECTION ---
---
# 2. The Service
apiVersion: v1
kind: Service
metadata:
  name: backend-service
spec:
  type: NodePort
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80       
      targetPort: 3000
